Fix docker files (main)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,23 +1,18 @@
 # syntax=docker/dockerfile:1
-FROM dockerhub.deepmagic.sk/stu/dev-base:latest
+FROM vggfiit/vgg-torch:latest
 
-# Instalujeme inno packages
+# Update the APT-GET
 RUN apt-get update --fix-missing
 RUN apt-get install apt-transport-https
 RUN apt-get install ca-certificates
 RUN update-ca-certificates
 
-# User created in parent container
-ARG USERNAME=user
 
-# ADD YOUR ID HERE - id into console
-ARG USER_UID=XXXX
-ARG USER_GID=$USER_UID
+USER root
 
-WORKDIR /app
+# Install required packages
+WORKDIR /setup
 COPY requirements.txt requirements.txt
-
-# Nainstalujeme requirementy
 RUN pip install -r requirements.txt
-USER user
 
+WORKDIR /workspace/yolo-training
