--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 	"dockerFile": "../docker/Dockerfile",
 
 	// Set *default* container specific settings.json values on container create.
-	"settings": {},
+	"settings": { },
 	
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
@@ -20,25 +20,28 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
-	// Uncomment the next line to run commands after the container is created - for example installing curl.
-	// "postCreateCommand": "apt-get update && apt-get install -y curl",
-
 	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust
 	"runArgs": [ 
 		"--gpus", "all", "--privileged",
 		"--network=bridge",
 		"--shm-size", "8g",
-		"-e", "CUDA_VISIBLE_DEVICES=0"
+		"-e", "CUDA_VISIBLE_DEVICES=0,1",
+
+		// Volumes
+		"-v", "/mnt/scratch/${localEnv:USER}/${localWorkspaceFolderBasename}:/workspace/${localWorkspaceFolderBasename}/.mnt/scratch",
+		"-v", "/mnt/persist/${localEnv:USER}/${localWorkspaceFolderBasename}:/workspace/${localWorkspaceFolderBasename}/.mnt/persist",
+		"-v", "/mnt/scratch/${localEnv:USER}/data:/workspace/${localWorkspaceFolderBasename}/.mnt/data",
+		"-v", "${localEnv:HOME}/.netrc:/root/.netrc"
 	],
 
-	"mounts": [
-		"source=/mnt/data,target=/data,type=bind,consistency=cached",
-		"source=${env:HOME}${env:USERPROFILE}/.netrc,target=/root/.netrc,type=bind"
-	  ]
+	"mounts": [ 
+        // Git & Other credentials
+		"source=${localEnv:HOME}/.gitconfig,target=/root/.gitconfig,type=bind,readonly"
+	],
 
 	// Uncomment to use the Docker CLI from inside the container. See https://aka.ms/vscode-remote/samples/docker-from-docker.
 	// "mounts": [ "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind" ]
 
-	// Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "vscode"
+	"workspaceMount": "source=${localWorkspaceFolder},target=/workspace/${localWorkspaceFolderBasename},type=bind",
+	"workspaceFolder": "/workspace/${localWorkspaceFolderBasename}"
 }
