--- a/params.yaml
+++ b/params.yaml
@@ -1,16 +1,16 @@
 train:
-  group: detection 
-  dataFolder: /data
-  dataTrain: dataset_train.h5
-  dataVal: dataset_test.h5
+  group: implementing-runs
+  dataFolder: ../.mnt/h5
+  dataTrain: train.h5
+  dataVal: val.h5
   detectionGridSize: [7,7]
   imageSize: [224,224]
   nCategories: 120
   optim_decay: 0
   epochs: 20
   numWorkers: 8
-  batchSize: 64
-  lr: 0.0001
+  batchSize: 4 #64
+  lr: 0.001
 
   saveCheckpoints: False
 
